@@ -1,4 +1,4 @@
-/* $OpenBSD: auth-passwd.c,v 1.36 2006/03/25 13:17:01 djm Exp $ */
+/* $OpenBSD: auth-passwd.c,v 1.37 2006/07/06 16:03:53 stevesk Exp $ */
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
  * Copyright (c) 1995 Tatu Ylonen <ylo@cs.hut.fi>, Espoo, Finland
@@ -37,6 +37,10 @@
  */
 
 #include "includes.h"
+
+#include <sys/types.h>
+
+#include <pwd.h>
 
 #include "packet.h"
 #include "buffer.h"
