@@ -1,4 +1,4 @@
-/* $OpenBSD: auth-rhosts.c,v 1.37 2006/03/25 13:17:01 djm Exp $ */
+/* $OpenBSD: auth-rhosts.c,v 1.38 2006/07/06 16:03:53 stevesk Exp $ */
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
  * Copyright (c) 1995 Tatu Ylonen <ylo@cs.hut.fi>, Espoo, Finland
@@ -22,6 +22,7 @@
 #ifdef HAVE_NETGROUP_H
 # include <netgroup.h>
 #endif
+#include <pwd.h>
 
 #include "packet.h"
 #include "uidswap.h"
