@@ -1,4 +1,4 @@
-/* $OpenBSD: auth-rsa.c,v 1.67 2006/03/25 18:29:35 deraadt Exp $ */
+/* $OpenBSD: auth-rsa.c,v 1.68 2006/07/06 16:03:53 stevesk Exp $ */
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
  * Copyright (c) 1995 Tatu Ylonen <ylo@cs.hut.fi>, Espoo, Finland
@@ -21,6 +21,8 @@
 
 #include <openssl/rsa.h>
 #include <openssl/md5.h>
+
+#include <pwd.h>
 
 #include "rsa.h"
 #include "packet.h"
