@@ -1,4 +1,4 @@
-/* $OpenBSD: monitor_wrap.h,v 1.16 2006/03/25 22:22:43 djm Exp $ */
+/* $OpenBSD: monitor_wrap.h,v 1.17 2006/07/06 16:03:53 stevesk Exp $ */
 
 /*
  * Copyright 2002 Niels Provos <provos@citi.umich.edu>
@@ -27,6 +27,11 @@
 
 #ifndef _MM_WRAP_H_
 #define _MM_WRAP_H_
+
+#include <sys/types.h>
+
+#include <pwd.h>
+
 #include "key.h"
 #include "buffer.h"
 
