@@ -1,4 +1,4 @@
-/* $OpenBSD: sftp-common.c,v 1.14 2006/07/02 22:45:59 stevesk Exp $ */
+/* $OpenBSD: sftp-common.c,v 1.15 2006/07/06 16:03:53 stevesk Exp $ */
 /*
  * Copyright (c) 2001 Markus Friedl.  All rights reserved.
  * Copyright (c) 2001 Damien Miller.  All rights reserved.
@@ -30,6 +30,7 @@
 #include <sys/stat.h>
 
 #include <grp.h>
+#include <pwd.h>
 
 #include "buffer.h"
 #include "bufaux.h"
