@@ -1,4 +1,4 @@
-/* $OpenBSD: sshpty.h,v 1.8 2006/03/25 22:22:43 djm Exp $ */
+/* $OpenBSD: sshpty.h,v 1.9 2006/07/06 16:03:53 stevesk Exp $ */
 
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
@@ -17,6 +17,9 @@
 #ifndef SSHPTY_H
 #define SSHPTY_H
 
+#include <sys/types.h>
+
+#include <pwd.h>
 #include <termios.h>
 
 struct termios get_saved_tio(void);
